// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideItem render as dependency 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="transition-all relative my-4  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="rounded-t-lg relative flex flex-col w-full p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="text-sm font-medium flex-1 items-center ">
            item
          </gui-card-title>
          <div class="px-2 py-1 border-[1px] border-solid rounded-full flex-initial">
            <p class="text-xs">
              1.0.0
            </p>
          </div>
        </div>
        <div class="flex items-center flex-row justify-between gap-2 flex-wrap px-3 py-2 border-muted-foreground/20 border-t-[1px]">
          <p class="text-sm text-muted-foreground/50">
            item@
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
              peer
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-b border-l border-solid border-neutral-300 dark:border-neutral-700 rounded-bl-sm z-0 w-[9px] -left-[9px] h-[13.35rem] bottom-[62px] group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24">
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependency with long name 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="transition-all relative my-4  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="rounded-t-lg relative flex flex-col w-full p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="text-sm font-medium flex-1 items-center ">
            lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation
          </gui-card-title>
          <div class="px-2 py-1 border-[1px] border-solid rounded-full flex-initial">
            <p class="text-xs">
              1.0.0
            </p>
          </div>
        </div>
        <div class="flex items-center flex-row justify-between gap-2 flex-wrap px-3 py-2 border-muted-foreground/20 border-t-[1px]">
          <p class="text-sm text-muted-foreground/50">
            lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation@
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
              peer
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-b border-l border-solid border-neutral-300 dark:border-neutral-700 rounded-bl-sm z-0 w-[9px] -left-[9px] h-[13.35rem] bottom-[62px] group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24">
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="transition-all relative my-4  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="rounded-t-lg relative flex flex-col w-full p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="text-sm font-medium flex-1 items-center ">
            item
          </gui-card-title>
          <div class="px-2 py-1 border-[1px] border-solid rounded-full flex-initial">
            <p class="text-xs">
              1.0.0
            </p>
          </div>
        </div>
        <div class="flex items-center flex-row justify-between gap-2 flex-wrap px-3 py-2 border-muted-foreground/20 border-t-[1px]">
          <p class="text-sm text-muted-foreground/50">
            item@
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;

exports[`SideItem render as multi-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="transition-all absolute border top-2 left-2 w-[96%] h-full bg-card rounded-lg group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <div class="transition-all absolute border top-1 left-1 w-[98%] h-full bg-card rounded-lg group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <gui-card
      role="article"
      classname="transition-all relative my-4  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="rounded-t-lg relative flex flex-col w-full p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="text-sm font-medium flex-1 items-center ">
            item
          </gui-card-title>
          <div class="px-2 py-1 border-[1px] border-solid rounded-full flex-initial">
            <p class="text-xs">
              1.0.0
            </p>
          </div>
        </div>
        <div class="flex items-center flex-row justify-between gap-2 flex-wrap px-3 py-2 border-muted-foreground/20 border-t-[1px]">
          <p class="text-sm text-muted-foreground/50">
            item@
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;

exports[`SideItem render as parent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="transition-all relative my-4 border-foreground cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="rounded-t-lg relative flex flex-col w-full p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="text-sm font-medium flex-1 items-center ">
            item
          </gui-card-title>
          <div class="px-2 py-1 border-[1px] border-solid rounded-full flex-initial">
            <p class="text-xs">
              1.0.0
            </p>
          </div>
        </div>
        <div class="flex items-center flex-row justify-between gap-2 flex-wrap px-3 py-2 border-muted-foreground/20 border-t-[1px]">
          <p class="text-sm text-muted-foreground/50">
            item@
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute border-t border-solid border-muted-foreground w-4 -right-4 top-7">
    </div>
  </div>
</div>

`;

exports[`SideItem render as two-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="transition-all absolute border top-1 left-1 w-[98%] h-full bg-card rounded-lg group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <gui-card
      role="article"
      classname="transition-all relative my-4  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="rounded-t-lg relative flex flex-col w-full p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="text-sm font-medium flex-1 items-center ">
            item
          </gui-card-title>
          <div class="px-2 py-1 border-[1px] border-solid rounded-full flex-initial">
            <p class="text-xs">
              1.0.0
            </p>
          </div>
        </div>
        <div class="flex items-center flex-row justify-between gap-2 flex-wrap px-3 py-2 border-muted-foreground/20 border-t-[1px]">
          <p class="text-sm text-muted-foreground/50">
            item@
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;
